syntax = "proto3";

package syft.core.node.common.action;

import "proto/core/node/common/action/save_object.proto";
import "proto/core/io/address.proto";

message ActionSequence {
  repeated syft.core.node.common.action.SaveObjectAction obj = 1;
  syft.core.io.Address address = 2;
}
